test/conformance/kuttl/validate/clusterpolicy/standard/block-policy/01-script.yaml
## Checks that the manifests.yaml file CANNOT be successfully created. If it can, fail the test as this is incorrect.

apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
- script: |
    if kubectl apply -f policy.yaml
    then 
      echo "Tested failed. policy was allowed."
      exit 1 
    else 
      echo "Test succeeded. policy was blocked."
      exit 0
    fi
